fix: handle missing covers on server
